Update APIv2 documentation with sparse fields params

--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -40,6 +40,7 @@ paths:
                 $ref: '#/components/schemas/Cart'
       parameters:
         - $ref: '#/components/parameters/CartIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
     get:
       description: Returns contents of the cart
       tags:
@@ -58,6 +59,7 @@ paths:
         - bearerAuth: []
       parameters:
         - $ref: '#/components/parameters/CartIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
 
   '/cart/add_item':
     post:
@@ -88,6 +90,7 @@ paths:
         - bearerAuth: []
       parameters:
         - $ref: '#/components/parameters/CartIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
       requestBody:
         required: true
         content:
@@ -133,6 +136,7 @@ paths:
         - bearerAuth: []
       parameters:
         - $ref: '#/components/parameters/CartIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
       requestBody:
         required: true
         content:
@@ -156,6 +160,7 @@ paths:
       parameters:
         - $ref: '#/components/parameters/LineItemId'
         - $ref: '#/components/parameters/CartIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
       responses:
         '200':
           description: Requested Line Item has been removed from the Cart
@@ -188,6 +193,7 @@ paths:
         - bearerAuth: []
       parameters:
         - $ref: '#/components/parameters/CartIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
 
   '/cart/apply_coupon_code':
     patch:
@@ -212,6 +218,7 @@ paths:
         - bearerAuth: []
       parameters:
         - $ref: '#/components/parameters/CartIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
       requestBody:
         required: true
         content:
@@ -237,6 +244,7 @@ paths:
             type: string
           example: 'DISCOUNT10'
         - $ref: '#/components/parameters/CartIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
       responses:
         '200':
           description: Coupon code was removed successfully
@@ -279,6 +287,7 @@ paths:
         - bearerAuth: []
       parameters:
         - $ref: '#/components/parameters/CartIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
 
   '/checkout/advance':
     patch:
@@ -305,6 +314,7 @@ paths:
         - bearerAuth: []
       parameters:
         - $ref: '#/components/parameters/CartIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
 
   '/checkout/complete':
     patch:
@@ -331,6 +341,7 @@ paths:
           - bearerAuth: []
         parameters:
         - $ref: '#/components/parameters/CartIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
 
   '/checkout/add_store_credit':
     post:
@@ -435,6 +446,7 @@ paths:
         - $ref: '#/components/parameters/PageParam'
         - $ref: '#/components/parameters/PerPageParam'
         - $ref: '#/components/parameters/ProductIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
       responses:
         '200':
           description: Returns a list of Products
@@ -455,6 +467,7 @@ paths:
       parameters:
         - $ref: '#/components/parameters/IdOrPermalink'
         - $ref: '#/components/parameters/ProductIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
       responses:
         '200':
           description: Returns the requested Product
@@ -495,6 +508,7 @@ paths:
         - $ref: '#/components/parameters/PageParam'
         - $ref: '#/components/parameters/PerPageParam'
         - $ref: '#/components/parameters/TaxonIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
       responses:
         '200':
           description: Returns a list of Taxons
@@ -516,6 +530,7 @@ paths:
       parameters:
         - $ref: '#/components/parameters/IdOrPermalink'
         - $ref: '#/components/parameters/TaxonIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
       responses:
         '200':
           description: Returns the reqested Taxon
@@ -553,6 +568,7 @@ paths:
       parameters:
         - $ref: '#/components/parameters/IsoOrIso3'
         - $ref: '#/components/parameters/CountryIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
       responses:
         '200':
           description: Returns the requested Country
@@ -572,6 +588,7 @@ paths:
         - Countries
       parameters:
         - $ref: '#/components/parameters/CountryIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
       responses:
         '200':
           description: Returns the default Country
@@ -589,6 +606,7 @@ paths:
       operationId: show
       parameters:
         - $ref: '#/components/parameters/AccountIncludeParam'
+        - $ref: '#/components/parameters/SparseFieldsParam'
       responses:
         '200':
           description: ok
@@ -1888,6 +1906,26 @@ components:
         type: string
       example: rails
       description: Find resources with matching name (supports wild-card, partial-word match search)
+    SparseFieldsParam:
+      in: query
+      name: fields
+      style: deepObject
+      description: >-
+        <p>Specify what attributes for given types you would like to receive in the response body.</p>
+        <p>
+          Format:
+          <ul>
+            <li>fields[cart]=total,currency,number</li>
+          </ul>
+        <p>
+          More information:
+          <a href="https://jsonapi.org/format/#fetching-sparse-fieldsets" target="_blank" rel="noopener">
+            https://jsonapi.org/format/#fetching-sparse-fieldsets
+          </a>
+        </p>
+      example: { "cart": "total,currency,number" }
+      schema:
+        type: object
   responses:
     404NotFound:
       description: Resource not found
