--- a/api/docs/v2/storefront/index.yaml
+++ b/api/docs/v2/storefront/index.yaml
@@ -262,6 +262,164 @@ paths:
         - orderToken: []
         - bearerAuth: []
 
+  '/checkout':
+    patch:
+      description: >-
+        Updates the Checkout
+        <br />
+        <p>
+          You can run multiple Checkout updates with different data types.
+        </p>
+        <h3>1. Update the Customer information<h3>
+        <pre>PATCH /checkout</pre>
+        <br />
+        <pre>
+          order: {
+            email: 'john@snow.org',
+            bill_address_attributes: {
+              {
+                firstname: 'John',
+                lastname: 'Snow',
+                address1: '7735 Old Georgetown Road',
+                city: 'Bethesda',
+                phone: '3014445002',
+                zipcode: '20814',
+                state_name: 'MD',
+                country_id: 232
+              }
+            },
+            ship_address_attributes: {
+              {
+                firstname: 'John',
+                lastname: 'Snow',
+                address1: '7735 Old Georgetown Road',
+                city: 'Bethesda',
+                phone: '3014445002',
+                zipcode: '20814',
+                state_name: 'MD',
+                country_id: 232
+              }
+            }
+          }
+        </pre>
+        <h3>2. Fetch Shipping Rates</h3>
+        <pre>
+        GET /checkout/shipping_rates
+        </pre>
+        <br />
+        <p>
+          Order can have multiple Shipments, eg. some Items will be shipped right away,
+          and some needs to be backordered.
+        </p>
+        <p>
+          Each Shipment can have different Shipping Method/Rate selected.
+        </p>
+
+        <h3>3. Select shipping method(s)</h3>
+        <pre>PATCH /checkout</pre>
+        <br />
+        <pre>
+          order: {
+            shipments_attributes: {
+              '0' => { selected_shipping_rate_id: 1, id: 1}
+            }
+          }
+        </pre>
+        <br />
+        <p>
+          <code>selected_shipping_rate_id</code> is the ID of a Shipping Rate.
+          <code>id</code> is the ID of the Shipment itself. You can update multiple
+          Shipments at once.
+        </p>
+        <h3>4. Add Payment Source(s)</h3>
+        <pre>PATCH /checkout</pre>
+        <br />
+        <pre>
+          {
+            order: {
+              payments_attributes: [
+                {
+                  payment_method_id: 1
+                }
+              ]
+            },
+            payment_source: {
+              '1' => {
+                number: '4111111111111111',
+                month: '01',
+                year: '2022',
+                verification_value: '123',
+                name: 'John Doe'
+              }
+            }
+          }
+        </pre>
+        <br />
+        <p>
+          You can obtain <code>payment_method_id</code> by querying
+          <code>GET /checkout/payment_methods</code> endpoint.
+        </p>
+        <h3>5. Complete checkout</h3>
+        <pre>PATCH /checkout/complete</pre>
+        <br />
+        <p>
+          This will complete the Checout and will marke the Order as completed.
+          You cannot execute any operations on this Order anymore via Storefront API.
+          Further operations on the Order are possible via Platform API.
+        </p>
+      tags:
+        - Checkout
+      responses:
+        '200':
+          description: Checkout was updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Cart'
+        '422':
+          description: Checkout couldn't be updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          $ref: '#/components/responses/404NotFound'
+      security:
+        - orderToken: []
+        - bearerAuth: []
+      parameters:
+        - $ref: '#/components/parameters/CartIncludeParam'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                order:
+                  type: object
+                  properties:
+                    email:
+                      type: string
+                      example: 'john@snow.org'
+                    bill_address_attributes:
+                      $ref: '#/components/schemas/AddressPayload'
+                    ship_address_attributes:
+                      $ref: '#/components/schemas/AddressPayload'
+                    payments_attributes:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          payment_method_id:
+                            type: number
+                            example: 1
+                            description: 'ID of selected payment method'
+                    shipments_attributes:
+                      type: object
+                payment_source:
+                  type: object
+
   '/checkout/next':
     patch:
       description: Goes to the next Checkout step
@@ -318,30 +476,29 @@ paths:
 
   '/checkout/complete':
     patch:
-        description: Completes the Checkout
-        tags:
-          - Checkout
-        responses:
-          '200':
-            description: Checkout was completed
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/Cart'
-          '422':
-            description: Checkout couldn't be completed
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/Error'
-          '404':
-            $ref: '#/components/responses/404NotFound'
-        security:
-          - orderToken: []
-          - bearerAuth: []
-        parameters:
-        - $ref: '#/components/parameters/CartIncludeParam'
-        - $ref: '#/components/parameters/SparseFieldsParam'
+      description: Completes the Checkout
+      tags:
+        - Checkout
+      responses:
+        '200':
+          description: Checkout was completed
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Cart'
+        '422':
+          description: Checkout couldn't be completed
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          $ref: '#/components/responses/404NotFound'
+      security:
+        - orderToken: []
+        - bearerAuth: []
+      parameters:
+      - $ref: '#/components/parameters/CartIncludeParam'
 
   '/checkout/add_store_credit':
     post:
@@ -1795,6 +1952,42 @@ components:
           $ref: '#/components/schemas/AccountAttributes'
         relationships:
           $ref: '#/components/schemas/AccountRelationships'
+    AddressPayload:
+      properties:
+        firstname:
+          type: string
+        lastname:
+          type: string
+        address1:
+          type: string
+          description: 'Street address'
+        address2:
+          type: string
+          description: 'Additional address information, floor no etc'
+        city:
+          type: string
+          description: 'City, town'
+        phone:
+          type: string
+        zipcode:
+          type: string
+          description: 'Valid zipcode, will be validated against the selected Country'
+        state_name:
+          type: string
+          description: 'State/region/province 2 letter abbrevation'
+        country_id:
+          type: number
+          description: 'ID number of Country in the database'
+      example:
+        firstname: 'John'
+        lastname: 'Snow'
+        address1: '7735 Old Georgetown Road'
+        address2: '2nd Floor'
+        city: 'Bethesda'
+        phone: '3014445002'
+        zipcode: '20814'
+        state_name: 'MD'
+        country_id: 232
 
   parameters:
     IdOrPermalink:
